[gd_scene load_steps=4 format=3 uid="uid://d3u7yipetxm21"]

[ext_resource type="Script" path="res://cases_logic/case_opening.gd" id="1_wxk1m"]
[ext_resource type="Texture2D" uid="uid://deqcrkpj6oloq" path="res://Sprites/cubuk.png" id="2_wcqx1"]
[ext_resource type="PackedScene" uid="uid://c6rgmvbmcgj4e" path="res://Scenes and Scripts/SkinUI.tscn" id="3_kh3nn"]

[node name="Case Opening" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wxk1m")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.521569, 0.521569, 0.521569, 1)

[node name="Case Scroll Container" type="ScrollContainer" parent="."]
clip_contents = false
custom_minimum_size = Vector2(0, 248)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Good luck!"

[node name="Item Container" type="HBoxContainer" parent="Case Scroll Container"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Item Cursor" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = -124.0
offset_right = 3.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wcqx1")
expand_mode = 1
stretch_mode = 5

[node name="Timer" type="Timer" parent="."]
wait_time = 0.09
autostart = true

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Button" type="Button" parent="Panel"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -111.0
offset_top = -98.0
offset_right = 111.0
offset_bottom = -40.0
text = "OK"

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -125.0
offset_right = 125.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(125, 125)
stretch_mode = 5

[node name="SkinUI" parent="Panel" instance=ExtResource("3_kh3nn")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -124.0
offset_right = 180.0
offset_bottom = 124.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Panel/Button" to="." method="_on_button_pressed"]
